# diystore

./: .dockerignore  .env-example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  Procfile  app.py  gunicorn.conf.py  pyproject.toml
app/diystore/api/: api_settings.py
app/diystore/api/flaskrestapi/: __init__.py  helpers.py
app/diystore/api/flaskrestapi/blueprints/: __init__.py  category.py  category_bp.py  common_objs.py  dev_bp.py  product.py  product_bp.py  review_bp.py  vendor_bp.py
app/diystore/application/: dto.py
app/diystore/application/usecases/product/: __init__.py  orderingcriteria.py  repository.py
app/diystore/application/usecases/product/getmidlevelcategories/: __init__.py  getmidlevelcategories.py  inputdto.py  outputdto.py
app/diystore/application/usecases/product/stubs/: stubs.py
app/diystore/domain/entities/product/: __init__.py  categories.py  photo.py  price.py  product.py  review.py  vat.py
app/diystore/domain/helpers/: __init__.py
app/diystore/infrastructure/: settings.py
app/diystore/infrastructure/cache/interfaces/: __init__.py  cache_interface.py  product_cache_interface.py
app/diystore/infrastructure/cache/redis_cache/: __init__.py  redis_cache.py  redis_product_cache.py
app/diystore/infrastructure/controllers/: __init__.py  presenters.py
app/diystore/infrastructure/controllers/web/: __init__.py  exceptions.py  factories.py  product.py
app/diystore/infrastructure/main/: __init__.py  ioc.py  ioc_factory.py  settings.py
app/diystore/infrastructure/repositories/sqlrepository/: exceptions.py  helpers.py  repository.py
(+129 files in other folders)
