[tool.poetry]
name = "dyistore"
version = "0.1.0"
description = "DIY Store e-Commerce Project"
authors = ["Vitor Centeio <vitor.centeio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
factory-boy = "^3.2.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
