[tool.poetry]
name = "diystore"
version = "0.1.0"
description = "DIY Store e-Commerce Project"
authors = ["Vitor Centeio <vitor.centeio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
factory-boy = "^3.2.1"
pendulum = "^2.1.2"
SQLAlchemy = "^1.4.39"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
Flask = "^2.1.3"
redis = "^4.4.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
devtools = "^0.8.0"
Pygments = "^2.12.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
